# aura-glow

./: .editorconfig  .gitattributes  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/demo/: CMakeLists.txt  main.cpp
artifacts/: out_after.ppm
docs/: COMPLIANCE.md  LEGAL.md
engine/: CMakeLists.txt
engine/include/auraglow/: engine.hpp
engine/src/: engine.cpp
scripts/: demo.ps1  setup_repo.ps1  verify.ps1
